Added role to View project

--- a/_pages/projects/behance.html
+++ b/_pages/projects/behance.html
@@ -25,10 +25,11 @@ keywords: behance, windows, app, phone
           </div>
         </div>
         <div class="row">
-            <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 14.5rem;"></div>
+            <div class="large-3 medium-3 small-collapsed columns mb4">
+                <div class="content-table-bar" style="display: inline-block; height: 16.5rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
+                    <li class="pv1 font-dark">Role</li>
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Research</li>
                     <li class="pv1 font-dark">IA</li>
@@ -40,6 +41,8 @@ keywords: behance, windows, app, phone
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4"><a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="font-primary-color">View for Behance</a> is a Behance app which is designed and built to offer an enriching and native experience on Windows Phone. It was conceptualised and developed for lack of an official native app for Windows Phone.</p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
+                <p class="text-justify font-dark lh-copy mt4">Product Designer and Developer</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
                 <p class="text-justify font-dark lh-copy mt4">It was April 2014 and I was a Windows Phone user back then. I always found it cumbersome to browse Behance on my device. There was (is) no official app in the Store nor there were any good third party alternatives. Browsing Behance on Internet Explorer was not a good way either (It was slow, believe me). There was not a single app which could provide a native experience. Internet Explorer was all you could use to browse Behance, but it was a slow and frustrating experience.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
