Added additional images on about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -17,9 +17,11 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
   <div class="large-5 medium-4 columns display-pic pr5">
     <img src="/assets/images/display-picture.jpg" alt="Display Picture"/>
   </div>
-  <div class="large-7 medium-8 columns ph3">
-    <p class="hero-text text-justify">I am <strong>Anagh Sharma</strong>, a Designer and Creative born and currently based in New Delhi, India. I have been doing Digital Product Design from last couple of years with a strong focus on making. Since then I have successfully <strong>designed, built and published</strong> several products including <strong>mobile apps and websites.</strong><br><br>I have always believed in the idea of making which powers me to bring my ideas to life. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>I am always ready and eager to solve problems that I encounter everyday be it detecting the colour and hence the type of bus (AC/Non AC) in the dark or letting people know the probability of a crime at their locations at a given time. If you are trying to solve our day-to-day problems and want a helping hand, reach out to me at - </p>
-    <ul class="inline-list ml0 mt4">
+  <div class="large-7 medium-8 columns pr4">
+    <p class="f2 lh-title font-medium">I am Anagh Sharma, a Designer and Creative born and currently based in New Delhi, India. I have been doing Digital Product Design from last couple of years with a strong focus on making. Since then I have successfully designed, built and published several products including mobile apps and websites.</p>
+    </br>
+    <p class="f4">I have always believed in the idea of making which powers me to bring my ideas to life. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>I am always ready and eager to solve problems that I encounter everyday be it detecting the colour and hence the type of bus (AC/Non AC) in the dark or letting people know the probability of a crime at their locations at a given time. If you are trying to solve our day-to-day problems and want a helping hand, reach out to me at - </p>
+    <!-- <ul class="inline-list ml0 mt4">
         <li>
           <a href="{{ site.email }}" class="icon-button button-light br3">
             <svg width="18px" height="14px" viewBox="0 0 18 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -49,20 +51,26 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
             </svg>
           </a>
         </li>
-      </ul>
+      </ul> -->
   </div>
 </div>
 <div class="row mb6">
   <div class="columns">
-    <hr class="font-secondary">
-    <h6 class="font-bold font-secondary quiet mt4 mb3">STILL HERE?</h6>
-    <ul>
-      <li>I really like Video Games - to explore how much creative humans can get.</li>
-      <li class="mv1">Have played Grand Theft Auto series uncountable times. Been exploring platformers from last couple of years - Limbo, Inside, Trine, Ori and the Blind Forest, Valiant Hearts, Never Alone, etc.</li>
-      <li>A sneaker head, currently rocking Nike SF Air Force 1, Nike Free Runner 2016 and Adidas Originals NMD R1.</li>
-      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic, Eminem, Twenty One Pilots, The Weeknd and The Chain Gangs of 1974.</li>
-      <li>Trying to get back into drawing and learning calligraphy as well.</li>
-      <li>Currently reading “Deep Work” by Cal Newport and trying to delve deep into Motion Design.</li>
-    </ul>
+    <div class="row">
+      <div class="columns">
+        <img src="/assets/images/about/about-first.png" alt="Display Picture"/>
+      </div>
+    </div>
+    <div class="row mt2">
+      <div class="large-4 medium-4 columns pb2">
+        <img src="/assets/images/about/about-second.png" alt="Playing two songs at a time"/>
+      </div>
+      <div class="large-4 medium-4 columns pb2">
+        <img src="/assets/images/about/about-third.png" alt="Lyrics not found"/>
+      </div>
+      <div class="large-4 medium-4 columns pb2">
+        <img src="/assets/images/about/about-fourth.png" alt="No internet connection"/>
+      </div>
+    </div>
   </div>
 </div>
