Added project SNKRHD to The Design Room

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -120,3 +120,54 @@ keywords: anagh sharma, design, experiment, designer
     <img src="/assets/images/the-design-room/carol-illustrations/005-no-internet.jpg" alt="No internet connection"/>
   </div>
 </div>
+
+<div class="row mt6">
+  <div class="columns">
+    <h6 class="font-medium font-secondary">S N K R H D</h6>
+  </div>
+</div>
+
+<div class="row mt3">
+  <div class="large-4 medium-4 columns pb2">
+      <p class="room-text text-justify pr5">Being a sneakerhead, I did a series of illustrations showing silhouette of the pairs that I own. The idea was to show the outlines in a golden colour to give the sneakers a premium look.</p>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/001-adidas-originals-nmr-r1.png" alt="Illustration of Adidas Originals NMD R1"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/002-nike-free-rn-2016.png" alt="Illustration of Nike Free RN 2016"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/003-puma-bog-limitless-hi.png" alt="Illustration of Puma B.O.G. Limitless Hi"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/004-nike-sf-air-force-1.png" alt="Illustration of Nike SF Air Force 1"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/005-nike-air-force-1-07.png" alt="Illustration of Nike Air Force 1 '07"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/006-converse-all-star.png" alt="Illustration of Converse All Star"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/007-nike-toki.png" alt="Illustration of Nike Toki"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/008-nike-air-max-270.png" alt="Illustration of Nike Air Max 270"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/009-nike-air-max-90-essential.png" alt="Illustration of Nike Air Max 90 Essential"/>
+  </div>
+  <div class="large-4 medium-4 columns end pb2">
+    <img src="/assets/images/the-design-room/snkrhd/010-air-jordan-1-retro-high-double-strap.png" alt="Illustration of Air Jordan 1 Retro High Double Strap"/>
+  </div>
+</div>
