--- a/_pages/room.html
+++ b/_pages/room.html
@@ -33,38 +33,38 @@ keywords: anagh sharma, design, experiment, designer
     <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/untitled-1/001-cedarwood-road.jpg" alt="Cedarwood Road"/>
+    <img src="/assets/images/the-design-room/untitled-1/001-cedarwood-road.jpg" class="slb" alt="Cedarwood Road"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/untitled-1/002-polarize.jpg" alt="Polarize"/>
+    <img src="/assets/images/the-design-room/untitled-1/002-polarize.jpg" class="slb" alt="Polarize"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/untitled-1/003-adventures-of-a-lifetime.jpg" alt="Adventures of a Lifetime"/>
+    <img src="/assets/images/the-design-room/untitled-1/003-adventures-of-a-lifetime.jpg" class="slb" alt="Adventures of a Lifetime"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/untitled-1/004-titanium.jpg" alt="Titanium"/>
+    <img src="/assets/images/the-design-room/untitled-1/004-titanium.jpg" class="slb" alt="Titanium"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/untitled-1/005-song-for-someone.jpg" alt="Song for Someone"/>
+    <img src="/assets/images/the-design-room/untitled-1/005-song-for-someone.jpg" class="slb" alt="Song for Someone"/>
   </div>
 </div>
 <div class="row">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-1/006-rap-god.jpg" alt="Rap God"/>
+      <img src="/assets/images/the-design-room/untitled-1/006-rap-god.jpg" class="slb" alt="Rap God"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-1/007-every-tear-is-a-waterfall.jpg" alt="Every Tear is a Waterfall"/>
+      <img src="/assets/images/the-design-room/untitled-1/007-every-tear-is-a-waterfall.jpg" class="slb" alt="Every Tear is a Waterfall"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-1/008-scars-to-your-beautiful.jpg" alt="Scars to Your Beautiful"/>
+      <img src="/assets/images/the-design-room/untitled-1/008-scars-to-your-beautiful.jpg" class="slb" alt="Scars to Your Beautiful"/>
     </div>
 </div>
 <div class="row mb6">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-1/009-love-the-way-you-lie.jpg" alt="Love the Way You Lie"/>
+      <img src="/assets/images/the-design-room/untitled-1/009-love-the-way-you-lie.jpg" class="slb" alt="Love the Way You Lie"/>
     </div>
 </div>
 
@@ -79,15 +79,15 @@ keywords: anagh sharma, design, experiment, designer
       <p class="room-text text-justify pr5">Tried my hands at a publication campaign to raise money for global disaster relief. The theme was - “The Spirit of making our world a better place” - in wake of all the calamities humanity faced in 2017.</p>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-2/01-stronger.png" alt="Stronger"/>
+      <img src="/assets/images/the-design-room/untitled-2/01-stronger.png" class="slb" alt="Stronger"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/untitled-2/02-better.png" alt="Better"/>
+      <img src="/assets/images/the-design-room/untitled-2/02-better.png" class="slb" alt="Better"/>
     </div>
 </div>
 <div class="row mb6">
       <div class="large-4 medium-4 columns pb2">
-        <img src="/assets/images/the-design-room/untitled-2/03-together.png" alt="Together"/>
+        <img src="/assets/images/the-design-room/untitled-2/03-together.png" class="slb" alt="Together"/>
       </div>
 </div>
 
@@ -102,22 +102,22 @@ keywords: anagh sharma, design, experiment, designer
       <p class="room-text text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/carol-illustrations/001-no-music.jpg" alt="No music playing"/>
+    <img src="/assets/images/the-design-room/carol-illustrations/001-no-music.jpg" class="slb" alt="No music playing"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/carol-illustrations/002-no-app.jpg" alt="No music app running"/>
+    <img src="/assets/images/the-design-room/carol-illustrations/002-no-app.jpg" class="slb" alt="No music app running"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/carol-illustrations/003-two-songs.jpg" alt="Playing two songs at a time"/>
+    <img src="/assets/images/the-design-room/carol-illustrations/003-two-songs.jpg" class="slb" alt="Playing two songs at a time"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/carol-illustrations/004-not-found.jpg" alt="Lyrics not found"/>
+    <img src="/assets/images/the-design-room/carol-illustrations/004-not-found.jpg" class="slb" alt="Lyrics not found"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/carol-illustrations/005-no-internet.jpg" alt="No internet connection"/>
+    <img src="/assets/images/the-design-room/carol-illustrations/005-no-internet.jpg" class="slb" alt="No internet connection"/>
   </div>
 </div>
 
@@ -132,42 +132,42 @@ keywords: anagh sharma, design, experiment, designer
       <p class="room-text text-justify pr5">Being a sneakerhead, I did a series of illustrations showing silhouette of the pairs that I own. The idea was to show the outlines in a golden colour to give the sneakers a premium look.</p>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/001-adidas-originals-nmr-r1.png" alt="Illustration of Adidas Originals NMD R1"/>
+    <img src="/assets/images/the-design-room/snkrhd/001-adidas-originals-nmr-r1.png" class="slb" alt="Illustration of Adidas Originals NMD R1"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/002-nike-free-rn-2016.png" alt="Illustration of Nike Free RN 2016"/>
-  </div>
-</div>
-
-<div class="row">
-  <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/003-puma-bog-limitless-hi.png" alt="Illustration of Puma B.O.G. Limitless Hi"/>
-  </div>
-  <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/004-nike-sf-air-force-1.png" alt="Illustration of Nike SF Air Force 1"/>
-  </div>
-  <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/005-nike-air-force-1-07.png" alt="Illustration of Nike Air Force 1 '07"/>
+    <img src="/assets/images/the-design-room/snkrhd/002-nike-free-rn-2016.png" class="slb" alt="Illustration of Nike Free RN 2016"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/006-converse-all-star.png" alt="Illustration of Converse All Star"/>
+    <img src="/assets/images/the-design-room/snkrhd/003-puma-bog-limitless-hi.png" class="slb" alt="Illustration of Puma B.O.G. Limitless Hi"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/007-nike-toki.png" alt="Illustration of Nike Toki"/>
+    <img src="/assets/images/the-design-room/snkrhd/004-nike-sf-air-force-1.png" class="slb" alt="Illustration of Nike SF Air Force 1"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/008-nike-air-max-270.png" alt="Illustration of Nike Air Max 270"/>
+    <img src="/assets/images/the-design-room/snkrhd/005-nike-air-force-1-07.png" class="slb" alt="Illustration of Nike Air Force 1 '07"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/snkrhd/009-nike-air-max-90-essential.png" alt="Illustration of Nike Air Max 90 Essential"/>
+    <img src="/assets/images/the-design-room/snkrhd/006-converse-all-star.png" class="slb" alt="Illustration of Converse All Star"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/007-nike-toki.png" class="slb" alt="Illustration of Nike Toki"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/008-nike-air-max-270.png" class="slb" alt="Illustration of Nike Air Max 270"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/snkrhd/009-nike-air-max-90-essential.png" class="slb" alt="Illustration of Nike Air Max 90 Essential"/>
   </div>
   <div class="large-4 medium-4 columns end pb2">
-    <img src="/assets/images/the-design-room/snkrhd/010-air-jordan-1-retro-high-double-strap.png" alt="Illustration of Air Jordan 1 Retro High Double Strap"/>
+    <img src="/assets/images/the-design-room/snkrhd/010-air-jordan-1-retro-high-double-strap.png" class="slb" alt="Illustration of Air Jordan 1 Retro High Double Strap"/>
   </div>
 </div>
