--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -39,7 +39,7 @@ keywords: branding, identity, design, storytelling
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Altogether it depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.<br><br> </p>
-                <img src="/assets/images/projects/identity/cs-first.jpg" alt="Design and Make"/>
+                <img src="/assets/images/projects/identity/cs-first.jpg" class="slb" alt="Design and Make"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
                 <p class="text-justify font-dark lh-copy mt4">Designer and Developer</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
@@ -77,14 +77,14 @@ keywords: branding, identity, design, storytelling
                 </p>
                 <h6 class="font-dark font-medium mt5">Logotype</h6>
                 <p class="text-justify font-dark lh-copy mt3">I started sketching keeping the reference - <strong>/Home/</strong> in my mind. I wanted to take it into account while designing the components. Looking around in my home sparked a lot of ideas for shapes and patterns. <br><br>I did somewhere around 20 iterations of the logotype before finalising it - </p>
-                <img src="/assets/images/projects/identity/cs-second.jpg" alt="Anagh Sharma logo iterations"/>
-                <img src="/assets/images/projects/identity/cs-third.jpg" class="mt3" alt="Anagh Sharma logo concept"/>
+                <img src="/assets/images/projects/identity/cs-second.jpg" class="slb" alt="Anagh Sharma logo iterations"/>
+                <img src="/assets/images/projects/identity/cs-third.jpg" class="slb mt3" alt="Anagh Sharma logo concept"/>
                 <h6 class="font-dark font-medium mt5">Colour</h6>
                 <p class="text-justify font-dark lh-copy mt3">Initially I picked the shades of Blue and Green for the identity which represent the colour of sky and earth (above and below the Home). But switched to a fiery red for the energy and passion it symbolises.</p>
-                <img src="/assets/images/projects/identity/cs-fourth.jpg" alt="Anagh Sharma logo colour demonstration"/>
+                <img src="/assets/images/projects/identity/cs-fourth.jpg" class="slb" alt="Anagh Sharma logo colour demonstration"/>
                 <h6 class="font-dark font-medium mt5">Typeface</h6>
                 <p class="text-justify font-dark lh-copy mt3">Selecting a typeface for any project can be a tricky and time consuming process. I picked up Roboto as my primary typeface for it works good with Digital and Print Media. For the secondary typeface, I selected Playfair Display; a serif typeface. Another motive for selecting these typefaces is that these are free and a part of open source software. </p>
-                <img src="/assets/images/projects/identity/cs-fifth.jpg" alt="Anagh Sharma typeface demonstration"/>
+                <img src="/assets/images/projects/identity/cs-fifth.jpg" class="slb" alt="Anagh Sharma typeface demonstration"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
                 <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
