--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -71,16 +71,16 @@ keywords: design, xbox, iphone, mobile, app, console
                         <li><strong>Profile</strong> - Personal Info, Message Friends.</li>
                     </ol>
                 </p>
-                <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4" alt="Navigation Flow"/>
+                <img src="/assets/images/projects/xbox/cs-first.jpg" class="slb mt4" alt="Navigation Flow"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
                 <!-- <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4" alt="XBOX Logo"/> -->
                 <iframe class="mt4" width="100%" height="390" src="https://www.youtube.com/embed/KdE4-YoPzsA?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-                <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4" alt="App Screens"/>
-                <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="mt4 mb5" alt="App Screens"/>
-                <img src="/assets/images/projects/xbox/cs-fifth.gif" class="mt4" alt="Achievement Unlocked animation"/>
-                <img src="/assets/images/projects/xbox/cs-sixth.gif" class="mt4" alt="Like animation in slow motion"/>
-                <img src="/assets/images/projects/xbox/cs-seventh.gif" class="mt4" alt="Post Update interaction"/>
-                <img src="/assets/images/projects/xbox/cs-eigth.gif" class="mt4 mb3" alt="Trending collpase animation in slow motion"/>
+                <img src="/assets/images/projects/xbox/cs-third.jpg" class="slb mt4" alt="App Screens"/>
+                <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="slb mt4 mb5" alt="App Screens"/>
+                <img src="/assets/images/projects/xbox/cs-fifth.gif" class="slb mt4" alt="Achievement Unlocked animation"/>
+                <img src="/assets/images/projects/xbox/cs-sixth.gif" class="slb mt4" alt="Like animation in slow motion"/>
+                <img src="/assets/images/projects/xbox/cs-seventh.gif" class="slb mt4" alt="Post Update interaction"/>
+                <img src="/assets/images/projects/xbox/cs-eigth.gif" class="slb mt4 mb3" alt="Trending collpase animation in slow motion"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
                 <p class="text-justify font-dark lh-copy mt4">Although this was just a conceptual redesign, I learnt a lot of things from this project - Time Constraint being the primary one. Instead of focusing on creating the end to end flows first, I got captivated with micro-interactions on the home screen. You could have guessed what happened next. I was not seeing any progress apparently as I was too much busy in making those interactions perfect; focusing on the time-taken by an element, position of the element and other motion stuff. It was only a matter of time when I stopped working on the project. Only after realising this I was able to pick the project again and finish it. This time I did not let my friend - perfection hang around with me. Building the end-to-end flow was a priority. Whilst the interactions were also taken care of which I know are far from perfect.</p>
                 <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5>
