Added hyperlink blogpost to The Garage

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@ keywords: design, portfolio, development, designer
       <div class="large-4 medium-5 columns">
           <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
         <ul class="no-bullet">
+            <li class="blog-list mv3 pv2 ph3">
+                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-content font-secondary-bold f5 lh-title">Creating a custom hyperlink control for Xamarin.Mac</a>
+              </li>
           <li class="blog-list mv3 pv2 ph3">
             <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-content font-secondary-bold f5 lh-title">Handling different UI states with a single ViewController</a>
-          </li>
-          <li class="blog-list mv3 pv2 ph3">
-            <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f5 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
           </li>
         </ul>
       </div>
